--- a/static/ride.html
+++ b/static/ride.html
@@ -93,7 +93,7 @@
     <script src="js/vendor/aws-cognito-sdk.min.js"></script>
     <script src="js/vendor/amazon-cognito-identity.min.js"></script>
     <script src="https://js.arcgis.com/4.3/"></script>
-    <script src="https://s3.amazonaws.com/wild-rydes-dev.dev.serverlessops.io-config/js/config.js"></script>
+    <script src="https://s3.amazonaws.com/wild-rydes-dev.dev.training.serverlessops.io-config/js/config.js"></script>
     <!-- <script src="js/cognito-auth.js"></script> -->
     <script src="js/esri-map.js"></script>
     <script src="js/ride.js"></script>
