--- a/static/ride.html
+++ b/static/ride.html
@@ -32,6 +32,11 @@
                 </ul>
             </div>
         </div>
+        <div class="form-group">
+            <label for="feedback">Submit Feedback</label>
+            <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
+            <button id="submit" type="submit" class="btn btn-primary">Submit</button>
+        </div>
         <div class="panel-body">
             <ol id="updates">
                 <li>Welcome! Click the map to set your pickup location.</li>
